--- a/css/edituser.css
+++ b/css/edituser.css
@@ -24,3 +24,24 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.form {
+  background: whitesmoke;
+  padding: 30px;
+}
+
+.error {
+  color: red;
+}
+
+.form__item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.form__item-label {
+  margin-bottom: 10px;
+}
+
+.form__item-input {}
